<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/tlo"
    android:padding="20dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        
        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo_szerokie"
            android:layout_marginTop="30dip"
            android:layout_marginBottom="20dip"
            android:layout_gravity="center"
            android:background="@color/endColor"
             />

     <TextView
            android:id="@+id/textView1"
            android:text="@string/wybor_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            
		    android:gravity="center"
		    
		    android:textColor="@color/tlo_jasnoszare"
		    android:textSize="30dp"
		    android:textStyle="bold"
		    
		    android:shadowColor="#000000"
		    android:shadowDx="4"
		    android:shadowDy="-4"
		    android:shadowRadius="2"
		    android:layout_marginBottom="20dp" />

 

		<Button android:text="@string/wybor_g1"
             android:id="@+id/button1"
             android:background="@drawable/button_red"
             style="@style/ButtonText"></Button>
        <Button android:text="@string/wybor_g2"
             android:id="@+id/button2"
             android:background="@drawable/button_red"
             style="@style/ButtonText"></Button>

        <Button android:text="@string/wybor_g3"
             android:id="@+id/button3"
             android:background="@drawable/button_red"
             style="@style/ButtonText"></Button>

        <Button android:text="@string/wybor_g4"
             android:id="@+id/button4"
             android:background="@drawable/button_red"
             style="@style/ButtonText"></Button>



    </LinearLayout>
    

</ScrollView>
