<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/tlo" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/start_ok"
        android:layout_gravity="center"
        android:paddingBottom="15dip" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dycha_1"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/tekstBiel"
        android:gravity="center"
        android:paddingBottom="15dip" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/dycha_2"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/tekstBiel"
        android:paddingBottom="15dip" />

     <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dycha_3"
        android:textColor="@color/tekstBiel"
        android:gravity="center"
        android:paddingBottom="15dip"
         />  
    </LinearLayout>
    

</ScrollView>
